syntax = "proto3";
package lsd;

service LSD {
    rpc SendNotification(NotificationPayload) returns (NotificationResult);
//    rpc GenerateNewKeyPair(NewKeyPairPayload) returns (KeyPairResult);
    rpc GenerateNewTokenForUser(NewTokenPayload) returns (TokenResult);
//    rpc GetKeyPair(KeyPairPayload) returns (KeyPairResult);
    rpc GetToken(TokenPayload) returns (TokenResult);
}

message NotificationPayload {
    repeated string to = 1;
    Notification notification = 2;
}

message NotificationResult {
    bool ok = 1;
    map<string, string> notifications = 2;
    // string notificationID = 2;
}

message Notification  {
    string title = 1;
    string body = 2;
    repeated string options = 3;
}

//message NewKeyPairPayload {
//    string userID = 1;
//}

message NewTokenPayload {
    string userID = 1;
}

//message KeyPairPayload {
//    string userID = 1;
//}

message TokenPayload {
    string userID = 1;
}

//message KeyPairResult {
//    string userID = 1;
//    bytes publicKey = 2;
//}

message TokenResult {
    string userID = 1;
    string token = 2;
}